# aruba-ai-tf-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
aruba_ai_workshop_tf/: TF-Aruba-Lab-CreateModel.ipynb  TF-Aruba-Lab-Load-Model.ipynb  Untitled.ipynb  fix_images.py  tflab.py  tfload_model.py
aruba_ai_workshop_tf/.ipynb_checkpoints/: TF-Aruba-Lab-CreateModel-checkpoint.ipynb  TF-Aruba-Lab-Load-Model-checkpoint.ipynb
aruba_ai_workshop_tf/imageclassificiation/: imageclassifier.h5
tests/: test_aruba_ai_workshop_tf.py
